frontend/style.css
@font-face {
  font-family: "Vine Spinach";
  src: url("./assets/fonts/VineSpinach.otf");
}

:root{
  --main-color: #71B7AD;
  --main-darker: #48978C;
  --accent: #99DF8A;
  --accent-darker: #71C85F;
  font-family: Courier, Arial;
}

body{
  height: 100vh;
  width: auto;
  margin: 0;
  background-color: #F5FDE1;
}

text{
  font-family:Helvetica, Arial, sans-serif;
  font-size:18px;
  pointer-events:none;
}

.intro{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.intro *{
  max-width: 600px;
}

.intro p{
  margin: 5px 0 0 0;
}

.title{
  text-align: center;
  font-family: 'Vine Spinach', Courier, Arial;
  font-weight: 100;
  margin: 0 0 4px 0;
}

#main_content{
  display: flex;
  justify-content: center;
}

#chart{
  position:inline;
  width:450px;
  height:450px;
  top:10rem;
  left:0;
  /* margin: auto; */
}

#notif{
  text-align: center;
  font-weight: bold;

}

#add{
  flex: 1;
}

#delete{
  flex: 1;
}
img{
  width: 50px;
  height: 50px
}

.buttons_container{
  display: flex;
  justify-content: center;
}

.buttons{
  padding: 10px;
  border-radius: 10px;
  border: var(--main-darker) 5px solid;
  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
  display: inline-flex;
  gap: 5px;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--main-color);
  margin: 0 auto;
}

.buttons button{
  background-color: white;
  border: black 5px solid;
  border-radius: 5px;
}

.buttons button:hover{
  transition: background-color .2s;
  background-color: rgb(182, 182, 182);
  cursor: pointer;
}

.add_container{
  display: flex;
  flex-direction: column;
}

#fireworks{
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0px;
  left: 0px;
  display: none;
}

#stats{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
}

.total_spin_container{
  display: flex;
  background-color: var(--accent);
  padding: 10px;
  justify-content: center;
  border-radius: 10px;
  margin-top: 20px;
  border:var(--accent-darker) 5px solid;
}

.leaderboard{
  padding: 10px;
  background-color: var(--main-color);
  border-radius: 10px;
  border: var(--main-darker) 5px solid;
}

.leaderboard h3{
  text-align: center;
  margin: 5px 0;
}

.leaderboard ol{
  list-style-position: inside;
  margin: 0;
  margin-left: 10px;
  padding:0;
}

.leaderboard ol li{
  margin: 8px 0;
}

/**************************
  Basic Modal Styles
**************************/

.modal {
  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
  z-index: 100;
}

.modal__overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0,0,0,0.75);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index:10;
}

.modal__container {
  background-color: #fff;
  padding: 30px;
  max-width: 360px;
  height: 100%;
  width: 50%;
  border-radius: 4px;
  overflow-y: auto;
  box-sizing: border-box;
}

@supports (display: flex) {
	
	.modal__container {
		height: initial;
		max-height: 80vh;
	}
	
}

.modal__header {
  position: relative;
  display: block;
  height: 30px;
  margin-bottom: 20px;
}

@supports (display: flex) {
	
	.modal__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
	  height:initial;
	  margin-bottom: 0px;
	}
	
}

.modal__title {
  position: absolute;
  top: 20px;
  left: 20px;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1.25;
  color: #00449e;
  box-sizing: border-box;
}

.modal__close {
  position: absolute;
  top: 20px;
  right: 20px;
  background: transparent;
  border: 0;
  cursor: pointer;
  margin: 0px;
  padding: 0px;
}

@supports (display: flex) {
	
  .modal__title {
	  position: static;
  }
	
  .modal__close {
	  position: static;
  }
  
}

.modal__header .modal__close:before { content: "\2715"; }

.modal__content {
  margin-top: 10px;
  margin-bottom: 10px;
  color: rgba(0,0,0,.8);
}

@supports (display: flex) {
	
	.modal__content {
	  margin-top: 2rem;
	  margin-bottom: 2rem;
	  line-height: 1.5;
	}

}

.modal__btn {
  font-size: .875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: .5rem;
  padding-bottom: .5rem;
  background-color: #e6e6e6;
  color: rgba(0,0,0,.8);
  border-radius: .25rem;
  border-style: none;
  border-width: 0;
  cursor: pointer;
  -webkit-appearance: button;
  text-transform: none;
  overflow: visible;
  line-height: 1.15;
  margin: 0;
  will-change: transform;
  -moz-osx-font-smoothing: grayscale;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  transition: -webkit-transform .25s ease-out;
  transition: transform .25s ease-out;
  transition: transform .25s ease-out,-webkit-transform .25s ease-out;
}

.modal__btn-primary {
  background-color: #009e4a;
  color: #fff;
}

#delete {
   background-color: #d01a1a;
   margin-top: 10px;
}

/**************************
  Demo Animation Style
**************************/

@keyframes mmfadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}

@keyframes mmfadeOut {
    from { opacity: 1; }
      to { opacity: 0; }
}

@keyframes mmslideIn {
  from { transform: translateY(15%); }
    to { transform: translateY(0); }
}

@keyframes mmslideOut {
    from { transform: translateY(0); }
    to { transform: translateY(-10%); }
}

.micromodal-slide {
  display: none;
}

.micromodal-slide.is-open {
  display: block;
}

.micromodal-slide[aria-hidden="false"] .modal__overlay {
  animation: mmfadeIn .3s cubic-bezier(0.0, 0.0, 0.2, 1);
}

.micromodal-slide[aria-hidden="false"] .modal__container {
  animation: mmslideIn .3s cubic-bezier(0, 0, .2, 1);
}

.micromodal-slide[aria-hidden="true"] .modal__overlay {
  animation: mmfadeOut .3s cubic-bezier(0.0, 0.0, 0.2, 1);
}

.micromodal-slide[aria-hidden="true"] .modal__container {
  animation: mmslideOut .3s cubic-bezier(0, 0, .2, 1);
}

.micromodal-slide .modal__container,
.micromodal-slide .modal__overlay {
  will-change: transform;
}

/**************************
  Custom styles for individual modals
**************************/

.modal__selected_text{
  display: flex;
  justify-content: center;
  font-size: 20px;
}

.modal__container button {
	outline: none;
	cursor: pointer !important;
}

.modal__container h2.modal__title {
	color: #595959;
}

.modal__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.modal__title {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1.25;
  color: #00449e;
  box-sizing: border-box;
}

.modal__close {
  font-size: 24px;
}

.modal__content {
  margin-top: 2rem;
  margin-bottom: 2rem;
  line-height: 1.5;
  color: rgba(0,0,0,.8);
}

/* .modal__btn {
  padding: 10px 15px;
  background-color: #e6e6e6;
  border-radius: 4px;
  -webkit-appearance: none;
} */

/**************************
  Mobile custom styles for individual modals
**************************/

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
	
	.modal__container {
	  width: 90% !important;
	  min-width: 90% !important;
	}
	
	@supports (display: flex) {
	
		.modal__container {
			width: 90% !important;
			min-width: 90% !important;
		}
		
	}
  
}

/**************************
  Non modal styles
**************************/

button.external {
  padding: 10px !important;
  font-weight: bold;
  background: rgba(0, 0, 0, 0.05);
  border-radius: 15px;
}

.other-links {
  padding: 5px;
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
    helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
}

.other-links h2 {
  font-size: 12px;
}

.other-links a {
  font-size: 12px;
}    

footer{
  margin: 5px auto 2px auto;
  text-align: center;
}

